--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,9 @@
   align-items: center;
   justify-content: center;
 }
-
+.childDiv:hover {
+  background-color: yellow;
+}
 .container {
   display: flex;
   flex-wrap: wrap;
