--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
+* {
+  box-sizing: border-box;
+}
 .childDiv {
   height: 60px;
   width: 60px;
   border: 1px solid black;
   align-items: center;
   justify-content: center;
+  margin: 0;
+  padding: 0;
 }
 .childDiv:hover {
   background-color: yellow;
@@ -11,5 +16,14 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  width: 1000px;
+  width: 960px;
+  height: 960px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+div {
+  margin: 0;
+  padding: 0;
 }
