--- a/styles.css
+++ b/styles.css
@@ -19,11 +19,16 @@
   width: 960px;
   height: 960px;
   text-align: center;
-  margin: 0;
+  margin: auto;
   padding: 0;
 }
 
 div {
   margin: 0;
   padding: 0;
+}
+
+.button {
+  margin: auto;
+  text-align: center;
 }
