--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,9 @@
   margin: 0;
   padding: 0;
 }
-.childDiv:hover {
+/*.childDiv:hover {
   background-color: black;
-}
+}*/
 .container {
   display: flex;
   flex-wrap: wrap;
