--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 * {
   box-sizing: border-box;
 }
+body {
+  background-color: black;
+}
 .childDiv {
   height: 60px;
   width: 60px;
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   align-items: center;
   justify-content: center;
   margin: 0;
