--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 * {
   box-sizing: border-box;
 }
-body {
+/*body {
   background-color: black;
-}
+}*/
 .childDiv {
   height: 60px;
   width: 60px;
