--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
 * {
   box-sizing: border-box;
 }
-/*body {
-  background-color: black;
-}*/
+body {
+  font-family: "Cabin Sketch", sans-serif;
+  font-weight: 400;
+  font-style: bold;
+  text-align: center;
+  font-size: 50px;
+}
 .childDiv {
   height: 60px;
   width: 60px;
