--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 * {
+  font-family: "Cabin Sketch", sans-serif;
   box-sizing: border-box;
 }
 body {
@@ -6,7 +7,14 @@ body {
   font-weight: 400;
   font-style: bold;
   text-align: center;
-  font-size: 50px;
+  font-size: 70px;
+}
+
+div {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
 }
 .childDiv {
   height: 60px;
@@ -30,12 +38,6 @@ body {
   padding: 0;
 }
 
-div {
-  margin: 0;
-  padding: 0;
-}
-
 .button {
-  margin: auto;
   text-align: center;
 }
